--- a/linked/.npmrc
+++ b/linked/.npmrc
@@ -1,4 +1,4 @@
-init-author-email=t.yuichi111@gmail.com
+init-author-email=kojole.jp@gmail.com
 init-author-name=Yuichi Tanikawa
 init-license=MIT
 init-version=0.1.0
