Enable git.autofetch

--- a/linked/Code/User/settings.json
+++ b/linked/Code/User/settings.json
@@ -16,6 +16,7 @@
     ".clang-format": "yaml",
     ".envrc": "shellscript"
   },
+  "git.autofetch": true,
   "gitProjectManager.baseProjectsFolders": [
     "~/src"
   ],
