--- a/linked/.tmux.conf
+++ b/linked/.tmux.conf
@@ -7,6 +7,7 @@ set -g status-style "fg=colour247,bg=colour235"
 set -g status-left "#{prefix_highlight}#[fg=black,bg=colour247] #S "
 set -g status-left-length 20
 set -g status-right "#[fg=colour250,bg=colour236] #h #[bg=colour237] %Y/%m/%d(%a) %H:%M "
+setw -g allow-rename on
 setw -g monitor-activity on
 setw -g window-status-activity-style "fg=yellow,bright"
 setw -g window-status-bell-style default
