--- a/linked/Code/User/settings.json
+++ b/linked/Code/User/settings.json
@@ -1,4 +1,5 @@
 {
+  "breadcrumbs.enabled": true,
   "C_Cpp.clang_format_path": "/usr/local/bin/clang-format",
   "C_Cpp.intelliSenseEngine": "Default",
   "c-cpp-flylint.flexelint.enable": false,
@@ -16,9 +17,7 @@
     ".envrc": "shellscript"
   },
   "git.autofetch": true,
-  "gitProjectManager.baseProjectsFolders": [
-    "~/src"
-  ],
+  "gitProjectManager.baseProjectsFolders": ["~/src"],
   "gitProjectManager.openInNewWindow": true,
   "gitProjectManager.storeRepositoriesBetweenSessions": true,
   "prettier.singleQuote": true,
