Use One Dark Pro theme

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,26 +1,13 @@
 // $ jo -p recommendations=$(jo -a $(code --list-extensions))
 {
   "recommendations": [
+    "eamodio.gitlens",
     "EditorConfig.EditorConfig",
-    "Perkovec.emoji",
-    "PeterJausovec.vscode-docker",
-    "abusaidm.html-snippets",
-    "chenxsan.vscode-standardjs",
-    "dbaeumer.vscode-eslint",
-    "eg2.tslint",
+    "esbenp.prettier-vscode",
     "felipecaputo.git-project-manager",
-    "hars.CppSnippets",
     "hiro-sun.vscode-emacs",
-    "jbenden.c-cpp-flylint",
-    "liuji-jim.vue",
-    "lukehoban.Go",
-    "mkaufman.HTMLHint",
-    "ms-python.python",
-    "ms-vscode.cpptools",
-    "ms-vscode.Theme-TomorrowKit",
-    "msjsdiag.debugger-for-chrome",
-    "rebornix.Ruby",
+    "PeterJausovec.vscode-docker",
     "robertohuertasm.vscode-icons",
-    "ziyasal.vscode-open-in-github"
+    "zhuangtongfa.Material-theme"
   ]
 }
