--- a/linked/.tigrc
+++ b/linked/.tigrc
@@ -7,6 +7,7 @@ bind generic <C-b> move-page-up
 bind generic <C-f> move-page-down
 bind generic g move-first-line
 bind generic G move-last-line
+bind main G move-last-line
 bind status C !git commit --verbose
 
 bind generic <Esc>] !@hub browse
