--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,17 @@ before_install:
   - bundle install
   - brew update
   - brew --version
-  - mkdir -pv \
-    $HOME/.aws \
-    $HOME/.ssh \
-    $HOME/Dropbox/.share/.aws \
-    $HOME/Dropbox/.share/.ssh \
+  - mkdir -pv
+    $HOME/.aws
+    $HOME/.ssh
+    $HOME/Dropbox/.share/.aws
+    $HOME/Dropbox/.share/.ssh
     $HOME/Library/Application\ Support/Code/User
-  - touch \
-    $HOME/Dropbox/.share/.aws/config \
-    $HOME/Dropbox/.share/.aws/credentials \
-    $HOME/Dropbox/.share/.gitconfig.local \
-    $HOME/Dropbox/.share/.ssh/config \
+  - touch
+    $HOME/Dropbox/.share/.aws/config
+    $HOME/Dropbox/.share/.aws/credentials
+    $HOME/Dropbox/.share/.gitconfig.local
+    $HOME/Dropbox/.share/.ssh/config
     $HOME/Dropbox/.share/.zshenv.local
 install:
   - brew install zsh
