--- a/linked/.gitconfig
+++ b/linked/.gitconfig
@@ -38,7 +38,7 @@
 	co = checkout
 	d = diff
 	dc = diff --cached
-	delete-merged = "!f() { git branch --merged ${1:-master} | grep -v ${1:-master}$ | xargs -n 1 -r git branch -d; }; f"
+	delete-merged = "!f() { git branch --merged ${1:-master} | grep -v -e ${1:-master}$ -e master$ -e develop$ | xargs -n 1 -r git branch -d; }; f"
 	di = diff
 	dic = diff --cached
 	discard = checkout --
