--- a/linked/.gitconfig
+++ b/linked/.gitconfig
@@ -52,7 +52,7 @@
 	shallow-clone = clone --depth 1
 	st = status
 	stashes = !tig stash
-	sync-master = !git fetch --all && git checkout master && git merge --ff-only origin/master && git push $USER master
+	sync-upstream = !git fetch --all && git checkout master && git merge --ff-only origin/master && git push $USER master
 	tags = tag
 	this = !git init && git add --all && git commit -m 'Initial commit'
 	uncommit = reset --soft HEAD~
