--- a/linked/Code/User/settings.json
+++ b/linked/Code/User/settings.json
@@ -10,6 +10,15 @@
   "editor.minimap.enabled": false,
   "editor.renderLineHighlight": "all",
   "editor.scrollBeyondLastLine": false,
+  "eslint.autoFixOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "language": "vue",
+      "autoFix": true
+    }
+  ],
   "explorer.openEditors.visible": 0,
   "files.associations": {
     ".Brewfile": "shellscript",
@@ -23,6 +32,9 @@
   "gitProjectManager.baseProjectsFolders": ["~/src"],
   "gitProjectManager.openInNewWindow": true,
   "gitProjectManager.storeRepositoriesBetweenSessions": true,
+  "prettier.eslintIntegration": true,
+  "prettier.printWidth": 120,
+  "prettier.semi": false,
   "prettier.singleQuote": true,
   "python.pythonPath": "python3",
   "ruby.lint": {
@@ -34,6 +46,7 @@
   "search.exclude": {
     "**/.direnv": true
   },
+  "vetur.format.defaultFormatter.html": "prettyhtml",
   "window.title": "${activeEditorMedium}${separator}${rootName}",
   "workbench.colorTheme": "One Dark Pro",
   "workbench.editor.enablePreviewFromQuickOpen": false,
